Fixed wrapping in mobile UI

--- a/static/main.less
+++ b/static/main.less
@@ -1495,7 +1495,7 @@ span.mobile-break {
 
 .ui-tabs .ui-tabs-nav .ui-tabs-anchor.sp {
    /* Single page version */
-   min-width: 58px;
+   min-width: 61px;
 }
 
 .ui-tabs .ui-tabs-panel {
